XMLtoCSV/objects/unpackaged/objects/PCYC_Decision_Issues_Log__c.object
<CustomObject>
    <fields>
        <fullName>PCYC_Business_Development_Deal__c</fullName>
        <label>Business Development Deal</label>
        <referenceTo>PCYC_Business_Development_Deals__c</referenceTo>
        <relationshipName>Decision_Issues_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCYC_Decision_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Decision Contact Lookup on Decisions/Issues Log Field</description>
        <label>Decision Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Non Prescriber Account, Non HCP Staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Decision/Issues Logs</relationshipLabel>
        <relationshipName>Decision_Issues_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_Decision_Date__c</fullName>
        <description>Decision Date for Decisions and Issues Log related list</description>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCYC_Details__c</fullName>
        <description>Details on Decisions/Issues Log related list</description>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Decision/Issues Log</label>
    <nameField>
        <label>Decision/Issues Log  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision/Issues Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>